[gd_scene load_steps=16 format=3 uid="uid://d0gqt72onahbe"]

[ext_resource type="Script" uid="uid://sbqhb7lnn6so" path="res://scenes/screens/home/HomeUI.gd" id="1_2vj2r"]
[ext_resource type="FontFile" uid="uid://bromsfi4f0cgw" path="res://assets/fonts/GamjaFlower-Regular.ttf" id="1_cbyqw"]
[ext_resource type="Texture2D" uid="uid://d3fxvlgsepcno" path="res://assets/textures/tight-border-200x200-frame.png" id="1_hjaol"]
[ext_resource type="Texture2D" uid="uid://cavm6g7qiipcr" path="res://assets/textures/play-button.png" id="2_2mwih"]
[ext_resource type="Texture2D" uid="uid://cfpwyiniwxugj" path="res://assets/textures/play-button-stroke.png" id="3_oj1ra"]
[ext_resource type="PackedScene" uid="uid://bmi5tsem3iw7n" path="res://scenes/RobToy/RobToy.tscn" id="5_vsb85"]
[ext_resource type="PackedScene" uid="uid://cqrdpuvsq0yg3" path="res://scenes/RobDirChanger/RobDirChanger.tscn" id="6_3utvc"]
[ext_resource type="PackedScene" uid="uid://7ysavqyupudj" path="res://scenes/MobileAdaptaters/TouchScreenToPress.tscn" id="6_5a6xx"]
[ext_resource type="Texture2D" uid="uid://bcr8i2by3rjn2" path="res://assets/icons/github.png" id="6_vx7ch"]
[ext_resource type="PackedScene" uid="uid://bii0oophcu1cs" path="res://scenes/MobileAdaptaters/TouchScreenToURI.tscn" id="8_ssenw"]

[sub_resource type="LabelSettings" id="LabelSettings_s32f6"]
font = ExtResource("1_cbyqw")
font_size = 121

[sub_resource type="CircleShape2D" id="CircleShape2D_5a6xx"]
radius = 60.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5a6xx"]
size = Vector2(175.54, 77.68)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ssenw"]
size = Vector2(93.91, 79.1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rog8"]
size = Vector2(158.17, 62.435)

[node name="Home" type="Node2D"]

[node name="Polygon2D" type="Polygon2D" parent="."]
texture_repeat = 2
texture = ExtResource("1_hjaol")
texture_offset = Vector2(100, 100)
polygon = PackedVector2Array(-2470, -1490, 2540, -1370, 2520, 1720, -2490, 1790)
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="HomeUI" type="CanvasLayer" parent="."]
script = ExtResource("1_2vj2r")

[node name="Panel" type="Panel" parent="HomeUI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HomeUI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -305.0
offset_top = 181.0
offset_right = 305.0
offset_bottom = 303.0
grow_horizontal = 2
size_flags_vertical = 0
text = "One at a time"
label_settings = SubResource("LabelSettings_s32f6")

[node name="OutlineContainer" type="CenterContainer" parent="HomeUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = 39.0
offset_right = 37.5
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2

[node name="Outline" type="TextureRect" parent="HomeUI/OutlineContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 82)
layout_mode = 2
texture = ExtResource("3_oj1ra")
expand_mode = 1

[node name="PlayButtonContainer" type="CenterContainer" parent="HomeUI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = 39.0
offset_right = 37.5
offset_bottom = 121.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayButton" type="TextureButton" parent="HomeUI/PlayButtonContainer"]
unique_name_in_owner = true
self_modulate = Color(0.0940666, 0.85, 0.068, 1)
custom_minimum_size = Vector2(75, 82)
layout_mode = 2
texture_normal = ExtResource("2_2mwih")
ignore_texture_size = true
stretch_mode = 5

[node name="TouchScreenButton" parent="HomeUI/PlayButtonContainer/PlayButton" instance=ExtResource("6_5a6xx")]
position = Vector2(31.5, 40)
shape = SubResource("CircleShape2D_5a6xx")

[node name="HBoxContainer" type="HBoxContainer" parent="HomeUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -122.0
offset_right = 20.0
offset_bottom = -82.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50

[node name="CreditsButton" type="Button" parent="HomeUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cbyqw")
theme_override_font_sizes/font_size = 44
text = "Credits"

[node name="TouchScreenButton" parent="HomeUI/HBoxContainer/CreditsButton" instance=ExtResource("6_5a6xx")]
position = Vector2(63, 28)
shape = SubResource("RectangleShape2D_5a6xx")

[node name="ExitButton" type="Button" parent="HomeUI/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cbyqw")
theme_override_font_sizes/font_size = 45
text = "Exit"

[node name="TouchScreenButton" parent="HomeUI/HBoxContainer/ExitButton" instance=ExtResource("6_5a6xx")]
position = Vector2(31, 28)
shape = SubResource("RectangleShape2D_ssenw")

[node name="GithubLinkContainer" type="HBoxContainer" parent="HomeUI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -155.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/separation = 10
alignment = 1

[node name="TextureButton" type="TextureRect" parent="HomeUI/GithubLinkContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("6_vx7ch")
expand_mode = 4
stretch_mode = 4

[node name="GithubLink" type="LinkButton" parent="HomeUI/GithubLinkContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_colors/font_color = Color(1, 1, 0.560784, 1)
theme_override_fonts/font = ExtResource("1_cbyqw")
theme_override_font_sizes/font_size = 30
text = "Github"
underline = 1
uri = "https://github.com/JeanKouss/one-at-a-time"

[node name="TouchScreenButton" parent="HomeUI/GithubLinkContainer/GithubLink" instance=ExtResource("8_ssenw")]
position = Vector2(15, 18)
shape = SubResource("RectangleShape2D_4rog8")

[node name="Artifices" type="Node2D" parent="."]

[node name="RobDirChanger" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(-800, 200)
can_play_sound = false

[node name="RobDirChanger2" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(1400, 200)
facing = 3
can_play_sound = false

[node name="RobDirChanger3" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(600, 400)
facing = 0
can_play_sound = false

[node name="RobDirChanger4" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(600, -400)
facing = 3
can_play_sound = false

[node name="RobDirChanger5" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(-1400, -400)
facing = 2
can_play_sound = false

[node name="RobDirChanger6" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(-1400, 400)
can_play_sound = false

[node name="RobDirChanger7" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(800, 0)
can_play_sound = false

[node name="RobDirChanger8" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(1600, 0)
facing = 2
can_play_sound = false

[node name="RobDirChanger9" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(1600, 800)
facing = 3
can_play_sound = false

[node name="RobDirChanger10" parent="Artifices" instance=ExtResource("6_3utvc")]
modulate = Color(1, 1, 1, 0.00392157)
position = Vector2(800, 800)
facing = 0
can_play_sound = false

[node name="RobToy" parent="Artifices" instance=ExtResource("5_vsb85")]
position = Vector2(-1400, 400)
rotation = 3.21071e-06
initial_dir = 1

[node name="RobToy2" parent="Artifices" instance=ExtResource("5_vsb85")]
position = Vector2(800, 800)
rotation = -1.57079
initial_dir = 0

[node name="RobToy3" parent="Artifices" instance=ExtResource("5_vsb85")]
position = Vector2(-2200, 200)
rotation = 3.21865e-06
initial_dir = 1

[connection signal="pressed" from="HomeUI/PlayButtonContainer/PlayButton" to="HomeUI" method="_on_play_button_pressed"]
[connection signal="pressed" from="HomeUI/HBoxContainer/CreditsButton" to="HomeUI" method="_on_credits_button_pressed"]
[connection signal="pressed" from="HomeUI/HBoxContainer/ExitButton" to="HomeUI" method="_on_exit_button_pressed"]
